# AlbionFisher

./: .gitignore  AGENTS.md  README.md  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.cursor/agents/: architect.md  developer.md  researcher.md  triage.md  verifier.md
.cursor/rules/: loop-engineering.mdc
.cursor/skills/triage/: SKILL.md
albionfisher/: __init__.py  __main__.py
albionfisher/capture/: __init__.py  frame_source.py  window_finder.py
albionfisher/config/: __init__.py  defaults.yaml  settings.py
albionfisher/control/: __init__.py  emergency.py  input_controller.py
albionfisher/detection/: __init__.py  class_contract.py  detector.py  types.py
albionfisher/fsm/: __init__.py  events.py  machine.py  minigame.py  states.py
albionfisher/ui/: __init__.py  app.py  log_handler.py  main_window.py  worker.py
config/: settings.yaml
docs/: SPEC.md
model/: README.md  classes.yaml
scripts/: connect-github.ps1
tests/: test_class_contract.py  test_config.py  test_fsm.py  test_minigame.py
