[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "albionfisher"
version = "0.1.0"
description = "Vision-based fishing assistant for Albion Online (Windows, YOLO + PySide6)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ultralytics",
    "opencv-python",
    "PySide6",
    "dxcam",
    "mss",
    "pywin32",
    "pydirectinput",
    "keyboard",
    "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["albionfisher*"]

[tool.setuptools.package-data]
"albionfisher.config" = ["defaults.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
